Fix alignment bug.

--- a/src/index.css
+++ b/src/index.css
@@ -78,14 +78,20 @@ form {
 }
 
 .tape--date {
+  display: flex;
   font-family: 'myFirstFont';
   color: #00395d;
   position: absolute;
-  left: 389px;
+  left: 334px;
   top: 266px;
+  height: 50px;
+  width: 200px;
   transform: rotate(-88deg);
   font-size: 18px;
   font-weight: bold;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 @keyframes slideInFromLeft {
@@ -116,12 +122,10 @@ form {
   height: 75px;
   width: 200px;
   transform: rotate(-88deg);
-  text-decoration: underline;
   text-align: center;
   align-items: center;
   font-weight: bold;
   justify-content: center;
-  text-wrap: nowrap;
 }
 
 .card--timeframe{
@@ -162,11 +166,17 @@ form {
   align-self: center;
   /* animation: 1.5s ease-in 0s 1 slideInFromLeft; */
 }
+.image--contents {
+  display: inline-block;
+  height: 550px;
+  width: 550px
+}
 
 h1 {
-  font-family: "myFirstFont";
-  text-align:center;
+  font-family: 'Geologica', sans-serif;
+  text-align: center;
   font-size: 72px;
+  margin: 20px;
 }
 
 .tape {
@@ -204,7 +214,7 @@ h1 {
 
 #loading {
   position: fixed;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -226,11 +236,23 @@ h1 {
 .form {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  flex-direction:row;
+  color: black
 }
 .form > * {
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px
+  font-family: 'Geologica';
+  margin-bottom: 10px;
+  height: 50px;
+  width: 40vw;
+  max-width: 270px;
+}
+
+.form > input {
+  width: 90vw;
+  max-width: 550px;
+  text-align: center;
 }
 
 #metadata {
@@ -238,6 +260,7 @@ h1 {
   flex-direction: column;
   align-items: start;
   justify-content: center;
+  padding-bottom: 40px;
 }
 
 .metadata--song {
@@ -245,17 +268,87 @@ h1 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-decoration: none;
-  font-family: "Inter";
+  font-family: 'Geologica', sans-serif;
   font-size: 20px;
+  font-weight: 300;
+  margin-right: auto;
+}
+
+#metadata--user {
+  font-family: 'myFirstFont';
+  font-size: 30px;
+}
+
+#metadata--header {
+  display: flex;
+align-items: center;
+width: 100%;
+justify-content: left;
+
 }
 
 .metadata--logo {
   margin-top: 40px;
-  margin-bottom: 10px;
-  align-self:center;
+  margin-bottom: 40px;
+  align-self: center;
   height: 50px;
+  margin-right:auto
 }
 
-.form {
-  margin-bottom: 20px;
+.metadata--row {
+  display: flex;
+  /* justify-content: start; */
+  align-items: center;
+  width: 100%;
 }
+
+.metadata--artist {
+  display: flex;
+  color: black;
+  font-family: 'Geologica';
+  margin-left: 30px;
+  width: 100px;
+  justify-content: right;
+  text-align: right;
+}
+
+.form--item{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  font-family: 'Geologica';
+}
+
+
+option{
+  font-family:'Geologica';
+  text-align:center
+}
+
+select{
+  font-family:'Geologica';
+  text-align: center;
+  font-size: 14px;
+  color:black;
+  background-color: rgb(241, 241, 241);
+}
+
+form{
+  font-family: 'Geologica';
+  color:black;
+}
+
+button{
+  font-size: 14px;
+  color:black
+}
+
+.form--left {
+  margin-right:auto;
+}
+
+.form--full {
+  width: 100%;
+  max-width: 100%;
+}
+
